EAHW-1586 : Fixed the 2 Sonar issues